Closed Bug 805507 Opened 13 years ago Closed 13 years ago

full page invalidation on http://www.extremetech.com/

Categories

(Core :: Graphics, defect)

19 Branch
x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla20

People

(Reporter: mayankleoboy1, Assigned: mattwoodrow)

References

()

Details

Attachments

(3 files)

Attached file about support.txt
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/19.0 Firefox/19.0 Build ID: 20121025030620 Steps to reproduce: 1. Enable nglayout.debug.paint_flashing 2. go to http://www.extremetech.com/ 3. Hover mouse over the main tabs "computing" "mobile" "internet" "gaming" etc. Actual results: Full page invalidation Expected results: minimal invalidation Profile trace : http://people.mozilla.com/~bgirard/cleopatra/?report=8e64fe5ce2fa7736c4ef7db405df625c3b92348b
Component: Untriaged → Graphics: Layers
Product: Firefox → Core
On Firefox15, the repainting is very minimal, limited to the tabs itself. So this is probably a recent regression. Maybe due to dlbi ?
Blocks: dlbi
No whole screen invalidation for me on today's nightly, I assume because it has been fixed with all the other recent DLBI regressions. Thanks for the report!
Status: UNCONFIRMED → RESOLVED
Closed: 13 years ago
Resolution: --- → WORKSFORME
No, wait! It is doing a full page invalidate when I go back to the window.
Assignee: nobody → matt.woodrow
Status: RESOLVED → REOPENED
Component: Graphics: Layers → Graphics
Ever confirmed: true
Resolution: WORKSFORME → ---
Comment on attachment 690689 [details] [diff] [review] Only invalidate tables when the visual overflow actually changes Review of attachment 690689 [details] [diff] [review]: ----------------------------------------------------------------- ::: layout/base/FrameLayerBuilder.cpp @@ +29,5 @@ > #include "nsTransitionManager.h" > > #ifdef DEBUG > #include <stdio.h> > +#define DEBUG_INVALIDATIONS Do not do this ::: view/src/nsViewManager.cpp @@ +42,5 @@ > we ask for a specific z-order, we don't assume that widget z-ordering actually works. > */ > > #define NSCOORD_NONE INT32_MIN > +#define DEBUG_INVALIDATIONS Do not do this
Attachment #690689 - Flags: review?(roc) → review+
Status: REOPENED → RESOLVED
Closed: 13 years ago13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
The main issue is solved. But a slight regression has occured. Now when you hover the mouse over the tabs on the page, the tab becomes opaque. Then it does some network activity, and only after that it becomes highlighted.
Attached image regression
Please file a new bug for that and mark it blocking this one. Tracking multiple issues in one bug can get ugly fast. Thanks!
Depends on: 820884
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: