Bug 805507 -  Only invalidate tables when the visual overflow changes. r=roc